--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmAddScaling.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmAddScaling.en.resx
@@ -131,7 +131,7 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>83, 12</value>
+    <value>80, 15</value>
   </data>
   <data name="label1.Text" xml:space="preserve">
     <value>Batch Number:</value>
@@ -402,7 +402,7 @@
 </value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>83, 12</value>
+    <value>75, 15</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
     <value>Project Name:</value>
@@ -475,13 +475,13 @@
     <value>Experimental Process</value>
   </data>
   <data name="checkBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>96, 16</value>
+    <value>93, 19</value>
   </data>
   <data name="checkBox1.Text" xml:space="preserve">
     <value>Manual Input</value>
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>107, 12</value>
+    <value>100, 15</value>
   </data>
   <data name="label3.Text" xml:space="preserve">
     <value>Scan Code Entry：</value>
@@ -561,6 +561,9 @@
   </data>
   <data name="groupBox4.Text" xml:space="preserve">
     <value>Focal Scan Code Entry</value>
+  </data>
+  <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Times New Roman, 9pt</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -756,6 +759,9 @@
   <data name="keywordText.Parameter" xml:space="preserve">
     <value>Parameter</value>
   </data>
+  <data name="keywordText.projectUpdate" xml:space="preserve">
+    <value>Project update</value>
+  </data>
   <data name="keywordText.ScanByStandard" xml:space="preserve">
     <value>Please scan the barcode of our company according to the standard</value>
   </data>
@@ -779,8 +785,5 @@
   </data>
   <data name="keywordText.ValueNone" xml:space="preserve">
     <value>There is a point with an empty luminous value, please enter it again!</value>
-  </data>
-  <data name="projectUpdate" xml:space="preserve">
-    <value>Project update</value>
   </data>
 </root>
