--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMessageShow.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMessageShow.en.resx
@@ -381,10 +381,10 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 </value>
   </data>
-  <data name="keywordText.Waring1" xml:space="preserve">
-    <value>warning</value>
-  </data>
   <data name="keywordText.Waring2" xml:space="preserve">
+    <value>Warning</value>
+  </data>
+  <data name="keywordText.Waring1" xml:space="preserve">
     <value>warning</value>
   </data>
 </root>
